# billmock-app-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/.workflows/: gh-pages.yml
.github/workflows/: gh-pages.yml
.reuse/templates/: rust.commented.jinja2
LICENSES/: Apache-2.0.txt  MIT.txt
billmock-plug-card/: Cargo.toml
billmock-plug-card/src/: common.rs  lib.rs
book/: .gitignore  book.toml
book/src/: SUMMARY.md  application.md  dev_manual.md  dip_switch.md  feature_counter_reset.md  feature_disp_hw_info.md  feature_disp_rom.md  hardware.md  installation.md  overview.md  port_04_mini_etc.md  port_04_mini_host_side.md  port_04_mini_overview.md  port_04_mini_vend_side.md  port_04_overview.md  port_etc.md  port_host_side.md  port_overview.md  port_vend_side.md
book/src/dev/: dependency_injection.md  develop_environment.md  hardware.md  software.md
card-terminal-adapter/: Cargo.toml
card-terminal-adapter/src/: lib.rs  types.rs
docs/: dependencies.md
docs/img/: BillMockPCB_0v3.jpg.license
serial-arcade-example/: Cargo.toml
serial-arcade-example/src/: common.rs  example_byte.rs  example_str.rs  lib.rs
serial-arcade-example/src/tests/: mod.rs
serial-arcade-pay/: Cargo.toml  rust-toolchain.toml
serial-arcade-pay/src/: backup_types.rs  lib.rs
src/: main.rs
src/application/: io_bypass.rs  io_card.rs  io_remap.rs  mod.rs  mutual_inhibit.rs  player_to_vend_led.rs  pulse_meory_filter.rs
src/boards/: billmock_0v2.rs  billmock_0v3.rs  billmock_0v4.rs  billmock_mini_0v4.rs  billmock_mini_0v5.rs  const_str.rs  mod.rs
src/components/: .gitignore  bookmark.rs  dip_switch.rs  eeprom.rs  host_side_bill.rs  mod.rs  serial_device.rs  start_button.rs  vend_side_bill.rs  virtual_start.rs
src/components/serial_device/: .gitignore  SerialDevice.md  mod.rs
src/mp_fingerprint/: mod.rs
src/semi_layer/: buffered_opendrain.rs  buffered_output.rs  buffered_wait.rs  buffered_wait_receiver.rs  mod.rs  timing.rs
src/types/: buffered_opendrain_kind.rs  const_convert.rs  dip_switch_config.rs  fault_log.rs  input_port.rs  mod.rs  player.rs
