

# SPDX-FileCopyrightText: © 2023 Jinwoo Park (pmnxis@gmail.com)
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "billmock-plug-card"
version = "0.1.0"
edition = "2021"
authors = ["Jinwoo Park <pmnxis@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Example implementation of serial arcade payment method for billmock-app-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card-terminal-adapter = { path = "../card-terminal-adapter" } # Import generic interface for billmock-app-rs

defmt = "0.3"
defmt-test = "0.3.0"
crc = "3.0.1"

[dev-dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

