[package]
name = "card-terminal-adapter"
version = "0.1.0"
edition = "2021"
authors = ["Jinwoo Park <pmnxis@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Card terminal interface adapte for billmock-app-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
defmt = "0.3"
zeroable = "0.2.0"
