# SPDX-FileCopyrightText: © 2023 Jinwoo Park (pmnxis@gmail.com)
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "serial-arcade-pay"
version = "0.1.0"
edition = "2021"
authors = ["Jinwoo Park <pmnxis@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Common arcade serial type payment method interface for billmock-app-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
